@@ -1,5 +1,9 @@
 package com.example.hanaharmonybackend.config;
 
+import com.example.hanaharmonybackend.domain.User;
+import com.example.hanaharmonybackend.payload.code.ErrorStatus;
+import com.example.hanaharmonybackend.payload.exception.CustomException;
+import com.example.hanaharmonybackend.repository.UserRepository;
 import com.example.hanaharmonybackend.util.JwtTokenProvider;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
@@ -9,26 +13,29 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpHeaders;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.List;
+import java.util.Collections;
 
+@Component
 @RequiredArgsConstructor
 public class JwtAuthFilter extends OncePerRequestFilter {
 
     private final JwtTokenProvider jwt;
+    private final UserRepository userRepository;
 
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain chain)
             throws ServletException, IOException {
 
         String header = request.getHeader(HttpHeaders.AUTHORIZATION);
+
         if (StringUtils.hasText(header) && header.startsWith("Bearer ")) {
             String token = header.substring(7);
             try {
-                // refresh 토큰이면 인증 컨텍스트 세팅하지 않고 통과
                 String typ = jwt.parseTokenType(token);
                 if ("refresh".equalsIgnoreCase(typ)) {
                     chain.doFilter(request, response);
@@ -36,10 +43,23 @@ public class JwtAuthFilter extends OncePerRequestFilter {
                 }
 
                 Long uid = jwt.parseUserId(token);
-                var auth = new UsernamePasswordAuthenticationToken(uid, null, List.of());
+
+                //principal = User 엔티티로 세팅
+                User user = userRepository.findById(uid)
+                        .orElseThrow(() -> new CustomException(ErrorStatus.USER_NOT_FOUND));
+
+                var auth = new UsernamePasswordAuthenticationToken(
+                        user,                     // principal = User
+                        null,
+                        Collections.emptyList()   // 권한 필요 없으면 빈 리스트
+                );
                 SecurityContextHolder.getContext().setAuthentication(auth);
-            } catch (Exception ignored) {/* 유효하지 않으면 익명 처리 */ }
+
+            } catch (Exception ignored) {
+                // 토큰 문제면 익명으로 계속 진행 (엔드포인트에서 401 처리)
+            }
         }
+
         chain.doFilter(request, response);
     }
 }
